--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
 							<addClasspath>true</addClasspath>
 							<classpathPrefix>libs/</classpathPrefix>
 							<mainClass>
-								LineJoiner
+								com.alteredmechanism.apps.LineJoiner
 							</mainClass>
 						</manifest>
 					</archive>
