Added ability to build bin zip

--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,17 @@
 					</archive>
 				</configuration>
 			</plugin>
+			<plugin>
+				<!-- Build distributable binary zip with command: mvn clean package assembly:single -->
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<version>2.5.1</version>
+				<configuration>
+					<descriptors>
+						<descriptor>src/main/assembly/assembly.xml</descriptor>
+					</descriptors>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 </project>
