--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
+				<version>3.8.0</version>
 				<executions>
 					<execution>
 						<id>copy-dependencies</id>
@@ -42,6 +43,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
+				<version>3.8.0</version>
 				<configuration>
 					<archive>
 						<manifest>
